changed comments to eng

--- a/data/crawler.ipynb
+++ b/data/crawler.ipynb
@@ -24,7 +24,6 @@
     "titles = soup.find_all('h3')\n",
     "lyric_groups = soup.find_all('p')\n",
     "\n",
-    "# Списки для хранения названий и текстов песен\n",
     "titles_list = []\n",
     "lyrics_list = []"
    ]
@@ -36,17 +35,17 @@
    "outputs": [],
    "source": [
     "for title in titles:\n",
-    "    # Находим все теги <p>, следующие за текущим тегом <h3> до следующего <h3>\n",
+    "    # Finding all <p> tags following the current <h3> till the next <h3>\n",
     "    lyrics = []\n",
     "    next_element = title.find_next_sibling()\n",
     "    \n",
     "    while next_element and next_element.name != 'h3':\n",
     "        if next_element.name == 'p':\n",
-    "            # Получаем текст с сохранением разрыва строк\n",
+    "            # Getting text while preserving line breaks\n",
     "            lyrics.append(next_element.get_text(separator='\\n').strip())\n",
     "        next_element = next_element.find_next_sibling()\n",
     "    \n",
-    "    # Сохраняем текст в единую строку\n",
+    "    # Saving the text in one line\n",
     "    full_lyrics = '\\n'.join(lyrics)\n",
     "    \n",
     "    titles_list.append(title.text.strip())\n",
