--- a/word2vec_training/w2v_model.ipynb
+++ b/word2vec_training/w2v_model.ipynb
@@ -42,7 +42,7 @@
     "with open(txt_file, 'r', encoding='utf-8') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
-    "# Собираем токены\n",
+    "# Collecting tokens\n",
     "def process_line(line):\n",
     "    tokens = word_tokenize(line)\n",
     "    tokens = [word.lower() for word in tokens if word not in string.punctuation]\n",
@@ -105,7 +105,7 @@
     "word_model = gensim.models.Word2Vec(processed_tokens, vector_size=100, min_count=1, window=5, epochs=100)\n",
     "print('Checking similar words:')\n",
     "\n",
-    "# Смотрим сходства для некоторых слов для проверки\n",
+    "# Checking similarity for random words\n",
     "for word in ['girls', 'men', 'light', 'please', 'soon', 'freedom']:\n",
     "  most_similar = ', '.join('%s (%.2f)' % (similar, dist) for similar, dist in word_model.wv.most_similar(word)[:8])\n",
     "  print('  %s -> %s' % (word, most_similar))"
